--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,21 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:12
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: secret
+          POSTGRES_DB: simple_bank
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        
     steps:
     - uses: actions/checkout@v4
 
@@ -21,6 +36,9 @@ jobs:
       with:
         go-version: '1.20'
 
+    - name: Run migrations
+      run: make migrateup
+      
     - name: Test
       run: go test -v -cover ./...
 
