--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,9 +36,15 @@ jobs:
       with:
         go-version: '1.20'
 
+    - name: Install golang-migrate
+      run: |
+      curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.1/migrate.linux-amd64.tar.gz | tar xvz
+      sudo mv migrate.linux-amd64 /user/bin
+      which migrate
+    
     - name: Run migrations
       run: make migrateup
-      
+
     - name: Test
       run: go test -v -cover ./...
 
