--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,9 @@ jobs:
 
     - name: Install golang-migrate
       run: |
-      curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.1/migrate.linux-amd64.tar.gz | tar xvz
-      sudo mv migrate.linux-amd64 /user/bin
-      which migrate
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.1/migrate.linux-amd64.tar.gz | tar xvz
+        sudo mv migrate.linux-amd64 /user/bin/migrate
+        which migrate
     
     - name: Run migrations
       run: make migrateup
