--- a/app.env
+++ b/app.env
@@ -4,9 +4,9 @@
 DB_DRIVER=postgres
 
 #github action测试启用
-#DB_SOURCE=postgresql://root:secret@localhost:5432/simple_bank?sslmode=disable
+DB_SOURCE=postgresql://root:secret@localhost:5432/simple_bank?sslmode=disable
 #容器中测试
-DB_SOURCE=host=postgres12 port=5432 user=root password=secret dbname=simple_bank sslmode=disable
+#DB_SOURCE=host=postgres12 port=5432 user=root password=secret dbname=simple_bank sslmode=disable
 
 SERVER_ADDRESS=0.0.0.0:8080
 
